# coe

./: .goreleaser.yaml  README.md  config.example.yaml  go.mod  go.sum
.github/workflows/: release.yml
cmd/coe/: doctor.go  doctor_test.go  main.go  main_test.go  trigger.go  trigger_test.go
docs/: README.ja.md  README.md  README.zh-CN.md  arch-install.md  architecture.md  configuration.md  development.md  doubao-asr.md  fallbacks.md  gnome-focus-helper.md  gnome-globalshortcuts-matrix.md  install.md  pw-record-exit-status.md  qwen3-asr-vllm.md  roadmap.md
docs/feat/: doubao-cloud-asr-requirements.md  fcitx5-implementation-plan.md  fcitx5-module-design.md  scene-requirements.md  selected-text-edit-requirements.md
docs/ja/: configuration.md  development.md
docs/zh/: configuration.md  development.md
internal/app/: app.go  bootstrap.go  dictation_state.go  dictation_state_test.go  ipc.go  notifications.go  notifications_test.go  runtime.go  runtime_command.go  selected_text_edit.go  selected_text_edit_test.go
internal/asr/: auth.go  client.go  client_test.go  doubao.go  doubao_test.go  openai.go  openai_test.go  pcm.go  pcm_test.go  qwen3_vllm.go  whispercpp_cli.go  whispercpp_cli_test.go
internal/audio/: activity.go  activity_test.go  pwrecord.go  pwrecord_test.go  wav.go  wav_test.go
internal/capabilities/: probe.go  probe_test.go
internal/config/: config.go  config_test.go
internal/control/: control.go  control_test.go
internal/focus/: focus.go
internal/hotkey/: service.go  service_test.go
internal/llm/: client.go  openai.go  openai_test.go  selection_editor.go  selection_editor_test.go
internal/notify/: notify.go
packaging/fcitx5/: CMakeLists.txt  README.md
packaging/fcitx5/addon/: coe.conf
packaging/fcitx5/src/: coe_module.cpp
scripts/: build-fcitx-module.sh  install-fcitx-module.sh  install-user.sh
(+30 files in other folders)
